--- a/RcppShapeDTW/DESCRIPTION
+++ b/RcppShapeDTW/DESCRIPTION
@@ -11,3 +11,4 @@ Description: This package contains functions which allow to conduct simple kNN
 License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.3)
 LinkingTo: Rcpp
+SystemRequirements: C++11, GNU make
